--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tecelagem Fios de Ouro</title>
     <link rel="stylesheet" href="style.css">
-    <!-- Link para ícones Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
-    <!-- ===== Header ===== -->
+    <!-- Header -->
     <header>
         <div class="container">
             <h1>Tecelagem Fios de Ouro</h1>
@@ -24,7 +23,7 @@
         </div>
     </header>
 
-    <!-- ===== Sobre ===== -->
+    <!-- Sobre -->
     <section id="sobre">
         <div class="container">
             <h2>Sobre Nós</h2>
@@ -32,7 +31,7 @@
         </div>
     </section>
 
-    <!-- ===== Serviços ===== -->
+    <!-- Serviços -->
     <section id="servicos">
         <div class="container">
             <h2>Serviços</h2>
@@ -50,13 +49,13 @@
                 <div class="card">
                     <i class="fas fa-industry fa-3x"></i>
                     <h3>Produção em Larga Escala</h3>
-                    <p>Capacidade de atender pedidos corporativos com qualidade industrial mantendo o toque artesanal.</p>
+                    <p>Capacidade de atender pedidos corporativos mantendo o toque artesanal.</p>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- ===== Portfolio ===== -->
+    <!-- Portfolio -->
     <section id="portfolio">
         <div class="container">
             <h2>Nosso Portfolio</h2>
@@ -69,7 +68,7 @@
         </div>
     </section>
 
-    <!-- ===== Contato ===== -->
+    <!-- Contato -->
     <section id="contato">
         <div class="container">
             <h2>Contato</h2>
@@ -84,7 +83,7 @@
         </div>
     </section>
 
-    <!-- ===== Footer ===== -->
+    <!-- Footer -->
     <footer>
         <div class="container">
             <p>© 2025 Tecelagem Fios de Ouro. Todos os direitos reservados.</p>
@@ -97,4 +96,3 @@
     </footer>
 </body>
 </html>
-
