--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
     <section id="sobre">
         <div class="container">
             <h2>Sobre Nós</h2>
-            <p>Na Tecelagem Fios de Ouro, unimos tradição e inovação para criar tecidos exclusivos e de alta qualidade. Nossas peças são produzidas artesanalmente, garantindo durabilidade, beleza e sofisticação.</p>
+            <p>Somos um grupo de jovens de Cataguases apaixonados pelo universo dos tecidos. A Tecelagem Fios de Ouro nasceu do desejo de unir criatividade, tradição e inovação para criar tecidos exclusivos e de alta qualidade.</p>
+            <p>Nossas peças são produzidas artesanalmente, garantindo durabilidade, beleza e sofisticação. Cada detalhe reflete nosso cuidado e dedicação ao trabalho manual.</p>
+            <p><strong>Fundadores:</strong> Bettiane, Josué, Bruno e Isaque.</p>
         </div>
     </section>
 
@@ -90,3 +92,5 @@
     </footer>
 </body>
 </html>
+
+ 
