--- a/index.html
+++ b/index.html
@@ -1,96 +1,107 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tecelagem Fios de Ouro</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Tecelagem Fios de Ouro</title>
+<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
-    <header>
-        <div class="container">
-            <h1>Tecelagem Fios de Ouro</h1>
-            <nav>
-                <ul>
-                    <li><a href="#sobre">Sobre</a></li>
-                    <li><a href="#servicos">Serviços</a></li>
-                    <li><a href="#portfolio">Portfolio</a></li>
-                    <li><a href="#contato">Contato</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+<header>
+<div class="container">
+<h1>Tecelagem Fios de Ouro</h1>
+<nav>
+<ul>
+<li><a href="#sobre">Sobre</a></li>
+<li><a href="#servicos">Serviços</a></li>
+<li><a href="#portfolio">Portfolio</a></li>
+<li><a href="#selos">Selos</a></li>
+<li><a href="#contato">Contato</a></li>
+</ul>
+</nav>
+</div>
+</header>
 
-    <section id="sobre">
-        <div class="container">
-            <h2>Sobre Nós</h2>
-            <p>Somos um grupo de jovens de Cataguases apaixonados pelo universo dos tecidos. A Tecelagem Fios de Ouro nasceu do desejo de unir criatividade, tradição e inovação para criar tecidos exclusivos e de alta qualidade.</p>
-            <p>Nossas peças são produzidas artesanalmente, garantindo durabilidade, beleza e sofisticação. Cada detalhe reflete nosso cuidado e dedicação ao trabalho manual.</p>
-            <p><strong>Fundadores:</strong> Bettiane, Josué, Bruno e Isaque.</p>
-        </div>
-    </section>
+<section id="sobre" class="bg-decor">
+<div class="container">
+<h2>Sobre Nós</h2>
+<p>Somos um grupo de jovens de Cataguases apaixonados pelo universo dos tecidos. A Tecelagem Fios de Ouro nasceu do desejo de unir criatividade, tradição e inovação para criar tecidos exclusivos e de alta qualidade.</p>
+<p>Nossas peças são produzidas artesanalmente, garantindo durabilidade, beleza e sofisticação. Cada detalhe reflete nosso cuidado e dedicação ao trabalho manual.</p>
+<p><strong>Fundadores:</strong> Bettiane, Josué, Bruno, Isaque e Gustavo.</p>
+</div>
+</section>
 
-    <section id="servicos">
-        <div class="container">
-            <h2>Serviços</h2>
-            <div class="cards">
-                <div class="card">
-                    <i class="fas fa-spa fa-3x"></i>
-                    <h3>Tecelagem Artesanal</h3>
-                    <p>Criação de tecidos exclusivos feitos à mão, com atenção aos detalhes e qualidade premium.</p>
-                </div>
-                <div class="card">
-                    <i class="fas fa-palette fa-3x"></i>
-                    <h3>Design Personalizado</h3>
-                    <p>Desenvolvemos padrões e cores únicas para projetos de moda, decoração e produtos especiais.</p>
-                </div>
-                <div class="card">
-                    <i class="fas fa-industry fa-3x"></i>
-                    <h3>Produção em Larga Escala</h3>
-                    <p>Capacidade de atender pedidos corporativos mantendo o toque artesanal.</p>
-                </div>
-            </div>
-        </div>
-    </section>
+<section id="servicos">
+<div class="container">
+<h2>Serviços</h2>
+<div class="cards">
+<div class="card">
+<i class="fas fa-spa fa-3x"></i>
+<h3>Tecelagem Artesanal</h3>
+<p>Criação de tecidos exclusivos feitos à mão, com atenção aos detalhes e qualidade premium.</p>
+</div>
+<div class="card">
+<i class="fas fa-palette fa-3x"></i>
+<h3>Design Personalizado</h3>
+<p>Desenvolvemos padrões e cores únicas para projetos de moda, decoração e produtos especiais.</p>
+</div>
+<div class="card">
+<i class="fas fa-industry fa-3x"></i>
+<h3>Produção em Larga Escala</h3>
+<p>Capacidade de atender pedidos corporativos mantendo o toque artesanal.</p>
+</div>
+</div>
+</div>
+</section>
 
-    <section id="portfolio">
-        <div class="container">
-            <h2>Nosso Portfolio</h2>
-            <div class="grid-portfolio">
-                <div class="portfolio-item"><img src="img/tecido1.jpg" alt="Tecido 1"></div>
-                <div class="portfolio-item"><img src="img/tecido2.jpg" alt="Tecido 2"></div>
-                <div class="portfolio-item"><img src="img/tecido3.jpg" alt="Tecido 3"></div>
-                <div class="portfolio-item"><img src="img/tecido4.jpg" alt="Tecido 4"></div>
-            </div>
-        </div>
-    </section>
+<section id="portfolio">
+<div class="container">
+<h2>Nosso Portfolio</h2>
+<div class="grid-portfolio">
+<div class="portfolio-item"><img src="https://images.unsplash.com/photo-1613145997533-8b8fae3a5c6b" alt="Tecido 1"></div>
+<div class="portfolio-item"><img src="https://images.unsplash.com/photo-1613145997512-d5e4a8f29f28" alt="Tecido 2"></div>
+<div class="portfolio-item"><img src="https://images.unsplash.com/photo-1609586720516-3a9f8441c1a1" alt="Tecido 3"></div>
+<div class="portfolio-item"><img src="https://images.unsplash.com/photo-1609586720493-5b0f2d7b5b3f" alt="Tecido 4"></div>
+</div>
+</div>
+</section>
 
-    <section id="contato">
-        <div class="container">
-            <h2>Contato</h2>
-            <p>Email: contato@fiosdeouro.com</p>
-            <p>Telefone: (11) 99999-9999</p>
-            <form>
-                <input type="text" placeholder="Seu Nome" required>
-                <input type="email" placeholder="Seu Email" required>
-                <textarea placeholder="Mensagem" required></textarea>
-                <button type="submit">Enviar</button>
-            </form>
-        </div>
-    </section>
+<section id="selos">
+<div class="container">
+<h2>Nossos Selos</h2>
+<div class="selos">
+<div class="selo"><img src="https://upload.wikimedia.org/wikipedia/commons/5/5a/Green_Check_Mark.svg" alt="Meio Ambiente"><p>Meio Ambiente</p></div>
+<div class="selo"><img src="https://upload.wikimedia.org/wikipedia/commons/4/4e/Shield_check.svg" alt="Seguro Compra"><p>Compra Segura</p></div>
+<div class="selo"><img src="https://upload.wikimedia.org/wikipedia/commons/0/0b/Star_icon-72a7cf.svg" alt="Avaliações Clientes"><p>Avaliações Clientes</p></div>
+</div>
+</div>
+</section>
 
-    <footer>
-        <div class="container">
-            <p>© 2025 Tecelagem Fios de Ouro. Todos os direitos reservados.</p>
-            <div class="social">
-                <a href="#"><i class="fab fa-facebook-f"></i></a>
-                <a href="#"><i class="fab fa-instagram"></i></a>
-                <a href="#"><i class="fab fa-linkedin-in"></i></a>
-            </div>
-        </div>
-    </footer>
+<section id="contato">
+<div class="container">
+<h2>Contato</h2>
+<p>Email: contato@fiosdeouro.com</p>
+<p>Telefone: (11) 99999-9999</p>
+<form>
+<input type="text" placeholder="Seu Nome" required>
+<input type="email" placeholder="Seu Email" required>
+<textarea placeholder="Mensagem" required></textarea>
+<button type="submit">Enviar</button>
+</form>
+</div>
+</section>
+
+<footer>
+<div class="container">
+<p>© 2025 Tecelagem Fios de Ouro. Todos os direitos reservados.</p>
+<p>Agradecimento especial à Rede Doctum</p>
+<div class="social">
+<a href="#"><i class="fab fa-facebook-f"></i></a>
+<a href="#"><i class="fab fa-instagram"></i></a>
+<a href="#"><i class="fab fa-linkedin-in"></i></a>
+</div>
+</div>
+</footer>
 </body>
 </html>
-
- 
